# minimal_repro

./: Cargo.toml  README.md
lib/deployment/: Cargo.toml
lib/deployment/bindings/: Cargo.toml  build.rs
